Fix for Mobile where rollovers were being triggered on mobile navigation while scrolling

--- a/templates/_app-website/_editable/sass/modules/_mobileNav.scss
+++ b/templates/_app-website/_editable/sass/modules/_mobileNav.scss
@@ -25,6 +25,9 @@
                     
                 }//li
                 
+                //Mobile Fix Hover
+                li.no-hover a { color: #124498; backgroun: red; }
+                
                 //setup indicator of children
                 li.hasChildren > a { 
                 
